Store contact form emails via extra queue into Azure blob storage.

--- a/Eric.Jansen.Client/EmailTemplateSamples/en-us/contact/admin.body.html
+++ b/Eric.Jansen.Client/EmailTemplateSamples/en-us/contact/admin.body.html
@@ -1,5 +1,5 @@
 <ul>
     <li>Name: {{ContactName}}</li>
-    <li>Email: <a href="mailto: {{ContactEmail}}"{{ContactEmail}}</a></li>
+    <li>Email: <a href="mailto: {{ContactEmail}}"{{ContactEmail}}></a></li>
     <li>Message: {{ContactMessage}}</li>
 </ul>
