--- a/Eric.Jansen.Client/EmailTemplateSamples/en-us/contact/admin.body.html
+++ b/Eric.Jansen.Client/EmailTemplateSamples/en-us/contact/admin.body.html
@@ -19,6 +19,10 @@
         Check on: <a href="https://www.whatismyip.com/ip/{{IpAddress}}/">whatismyip.com</a><br /><br />
     </li>
     <li>
+        <strong><u>Tenant hostname</u>:</strong><br />
+        {{TenantHostName}}<br /><br />
+    </li>
+    <li>
         <strong><u>Useragent</u>:</strong><br />
         {{UserAgent}}<br /><br />
     </li>
