Changed waardenboom positioning.

--- a/Ej.Client/wwwroot/karus/Data/Waardenboom/content-3.html
+++ b/Ej.Client/wwwroot/karus/Data/Waardenboom/content-3.html
@@ -1,1 +1,14 @@
-﻿<p>Content 3</p>
+﻿<ul>
+    <li>Waarom heb ik deze waarde gekozen?</li>
+    <p>
+
+    </p>
+    <li>Doelen en acties om deze waarde te bereiken:</li>
+    <p>
+
+    </p>
+    <li>Hoe heeft mijn verslaving deze waarde beïnvloed?</li>
+    <p>
+
+    </p>
+</ul>
