--- a/Ej.Client/wwwroot/karus/Data/Waardenboom/content-5.html
+++ b/Ej.Client/wwwroot/karus/Data/Waardenboom/content-5.html
@@ -1,14 +1,20 @@
 ﻿<ul>
-    <li>Waarom heb ik deze waarde gekozen?</li>
-    <p>
-
-    </p>
-    <li>Doelen en acties om deze waarde te bereiken:</li>
-    <p>
-
-    </p>
-    <li>Hoe heeft mijn verslaving deze waarde beïnvloed?</li>
-    <p>
-
-    </p>
+    <li class='waardenboom_value'>
+        <p>Waarom heb ik deze waarde gekozen?</p>
+        <p>
+            Avontuur, letterlijk en vooral in de vorm van reizen, is iets wat mijn leven verrijkt en me helpt nieuwe perspectieven te ontdekken. Ik kies deze waarde omdat het verkennen van nieuwe plekken en culturen niet alleen opwindend is, maar me ook een gevoel van vrijheid en zelfontdekking geeft. Avontuur brengt me buiten mijn comfortzone, wat essentieel is voor eigen groei.
+        </p>
+    </li>
+    <li class='waardenboom_value'>
+        <p>Doelen en acties om deze waarde te bereiken:</p>
+        <p>
+            Mijn doel is om te blijven reizen en open te staan voor nieuwe ervaringen. Of het nu gaat om het ontdekken van een nieuw land of het aangaan van een onverwachte uitdaging, ik wil mijn nieuwsgierigheid blijven voeden en leren van de wereld om me heen.
+        </p>
+    </li>
+    <li class='waardenboom_value'>
+        <p>Hoe heeft mijn verslaving deze waarde beïnvloed?</p>
+        <p>
+            Mijn verslaving beperkte mijn vermogen om echt van avontuur te genieten. Terwijl ik dacht dat drinken een manier was om los te komen en nieuwe ervaringen op te doen, zorgde het er in werkelijkheid voor dat ik de echte avonturen miste. In plaats van me volledig onder te dompelen in nieuwe culturen en ervaringen, was ik vaak meer gefocust op drinken. Dit beperkte mijn reiservaringen en verminderde mijn vermogen om echt aanwezig te zijn in het moment.
+        </p>
+    </li>
 </ul>
