Corrected content in WaardenboomValues.

--- a/Ej.Client/wwwroot/karus/Data/Waardenboom/content-6.html
+++ b/Ej.Client/wwwroot/karus/Data/Waardenboom/content-6.html
@@ -2,13 +2,13 @@
     <li class='waardenboom_value'>
         <p>Waarom heb ik deze waarde gekozen?</p>
         <p>
-            Vrijheid is een waarde die ik enorm koester omdat ik geen gezin heb en geen vaste partner, wat mij in principe de ruimte geeft om mijn leven te leiden zoals ik dat wil. Het stelt me in staat om mijn eigen beslissingen te nemen en onafhankelijk te zijn, wat voor mij gelijk staat aan geluk en vervulling.
+            Vrijheid is een waarde die ik enorm koester omdat ik geen gezin heb en geen vaste partner, wat mij in principe de ruimte geeft om mijn leven te leiden zoals ik dat wil. Het stelt me in staat om mijn eigen beslissingen te nemen en onafhankelijk te zijn, wat voor mij in principe gelijk staat aan geluk.
         </p>
     </li>
     <li class='waardenboom_value'>
         <p>Doelen en acties om deze waarde te bereiken:</p>
         <p>
-            Mijn doel is om mijn vrijheid ten volle te benutten door keuzes te maken die mijn persoonlijke groei en geluk bevorderen. Dit betekent dat terug onafhankelijk wil worden en verantwoordelijk omga met mijn vrije tijd. Ik wil terug reizen, en mijn eigen pad volgen zonder me beperkt te voelen door externe verplichtingen. Klinkt egoïstisch, maar het is zo.
+            Mijn doel is om mijn vrijheid ten volle te benutten door keuzes te maken die mijn persoonlijke groei en geluk bevorderen. Dit betekent dat ik terug onafhankelijk wil worden en verantwoordelijk omga met mijn vrije tijd. Ik wil terug reizen, en mijn eigen pad volgen zonder me beperkt te voelen door externe verplichtingen, maaar dat is uiteraard niet altijd mogelijk. Klinkt misschien egoïstisch, maar het is zo.
         </p>
     </li>
     <li class='waardenboom_value'>
