--- a/Ej.Client/wwwroot/karus/Data/Waardenboom/content-3.html
+++ b/Ej.Client/wwwroot/karus/Data/Waardenboom/content-3.html
@@ -2,7 +2,7 @@
     <li class='waardenboom_value'>
         <p>Waarom heb ik deze waarde gekozen?</p>
         <p>
-            Innovatie, zowel op het gebied van studie als werk, staan me toe om te blijven leren en verbeteren. Ik ben van mening dat persoonlijke en professionele groei afhankelijk is van het vermogen om creatief te denken en nieuwe dingen te proberen. Innovatie houdt mijn leven interessant en zorgt ervoor dat ik niet stilsta in mijn ontwikkeling.
+            Innovatie, zowel op het gebied van studie als werk, staan me toe om te blijven leren en verbeteren. Ik ben van mening dat persoonlijke en professionele groei afhankelijk is van creatief te denken (of het vermogen om creatief te denken) en nieuwe dingen te proberen. Innovatie houdt mijn leven interessant en zorgt ervoor dat ik niet stilsta in mijn ontwikkeling.
         </p>
     </li>
     <li class='waardenboom_value'>
@@ -14,7 +14,7 @@
     <li class='waardenboom_value'>
         <p>Hoe heeft mijn verslaving deze waarde beïnvloed?</p>
         <p>
-            Mijn verslaving liet me niet meer toe om te innoveren. Het beroofde me van de focus en energie die nodig zijn om te blijven leren en groeien. In plaats van mijn tijd te besteden aan studie of werkprojecten, werd ik afgeleid door drinken, wat mijn creatieve en intellectuele groei stagneerde. Ik miste belangrijke kansen om mezelf te verbeteren en bleef in dezelfde patronen hangen, wat leidde tot frustratie en een gevoel van gemiste kansen.
+            Mijn verslaving liet me niet meer toe om te innoveren. Het ontnam (beroofde) me van de focus en energie die nodig zijn om te blijven leren en groeien. In plaats van mijn tijd te besteden aan studie of werkprojecten, werd ik afgeleid door drinken, wat mijn creatieve (en intellectuele) groei belemmerde. Ik miste belangrijke kansen om mezelf te verbeteren en bleef in dezelfde patronen hangen, wat leidde tot frustratie en een gevoel van gemiste kansen.
         </p>
     </li>
 </ul>
